#ifndef WORLD_MODEL_HPP
#define WORLD_MODEL_HPP

#include <chrono>
#include <vector>
#include "msd-sim/src/Environment/Platform.hpp"
#include "msd-sim/src/Physics/RigidBody/AssetEnvironment.hpp"
#include "msd-sim/src/Physics/RigidBody/AssetInertial.hpp"


namespace msd_sim
{

/**
 * @brief Container and manager for all simulation objects
 *
 * WorldModel uses a unified storage approach with index-based iteration
 * for efficient physics updates and collision detection.
 *
 * The WorldModel maintains:
 * - A single vector of all objects (graphical, inertial, environmental,
 * boundary)
 * - Cached index lists for efficient iteration over specific object types
 * - Current simulation time
 *
 * Efficient iteration patterns:
 * @code
 * // Physics update - only iterate objects with physics
 * for (size_t idx : worldModel.getPhysicsObjectIndices()) {
 *   Object& obj = worldModel.getObject(idx);
 *   // Update physics...
 * }
 *
 * // Collision detection - only iterate objects with collision hulls
 * for (size_t idx : worldModel.getCollisionObjectIndices()) {
 *   // Check collisions...
 * }
 *
 * // Rendering - only iterate objects with visual geometry
 * for (size_t idx : worldModel.getRenderObjectIndices()) {
 *   // Render...
 * }
 * @endcode
 */
class WorldModel
{
public:
  WorldModel() = default;
  ~WorldModel() = default;

  // ========== Object Management ==========

  /**
   * @brief Spawn a new object in the world
   *
   * Adds the object to the world and updates internal index caches.
   *
   * @param object Object to add (uses move semantics)
   * @return Index of added object
   */
  const AssetInertial& spawnObject(uint32_t assetId,
                                   ConvexHull& hull,
                                   const ReferenceFrame& origin);

  /**
   * @brief Get all objects (const)
   */
  const std::vector<AssetInertial>& getInertialAssets() const
  {
    return inertialAssets_;
  }

  const AssetInertial& getObject(uint32_t instanceId) const;

  AssetInertial& getObject(uint32_t instanceId);

  /**
   * @brief Remove object by index
   *
   * Note: This invalidates indices > removed index.
   * Consider marking objects for removal and cleaning up between frames.
   *
   * @param index Index of object to remove
   * @throws std::out_of_range if index is invalid
   */
  void removeObject(uint32_t instanceId);

  /**
   * @brief Get object count
   */
  size_t getObjectCount() const
  {
    return inertialAssets_.size();
  }

  /**
   * @brief Clear all objects from the world
   */
  void clearObjects();

  // ========== Efficient Iteration Helpers ==========

  /**
   * @brief Get indices of all objects with physics components
   *
   * Use this for physics integration loops.
   */
  const std::vector<AssetEnvironment>& getEnvironmentalObjects() const
  {
    return environmentalAssets_;
  }

  // ========== Simulation Update ==========

  /**
   * @brief Update world simulation
   *
   * Performs:
   * 1. Physics integration for objects with PhysicsComponent
   * 2. Collision detection for objects with collision hulls
   * 3. Collision resolution
   * 4. Updates simulation time
   *
   * @param deltaTime Time step for integration
   */
  void update(std::chrono::milliseconds deltaTime);

  /**
   * @brief Get current simulation time
   */
  std::chrono::milliseconds getTime() const
  {
    return time_;
  }

  // ========== NEW: Gravity Configuration (ticket 0023a) ==========

  /**
   * @brief Get the world gravity vector.
   * @return Gravity acceleration vector [m/s²]
   */
  const Coordinate& getGravity() const;

  // ========== Platform Management (Legacy) ==========

  /**
   * @brief Add a platform to the world
   * @param platform Platform to add
   */
  void addPlatform(Platform&& platform);

  /**
   * @brief Get all platforms (const)
   */
  const std::vector<Platform>& getPlatforms() const
  {
    return platforms_;
  }

  /**
   * @brief Get all platforms (mutable)
   *
   * Allows modification of platforms for input command updates.
   */
  std::vector<Platform>& getPlatforms()
  {
    return platforms_;
  }

  /**
   * @brief Get next platform ID
   * @return Next available platform ID
   */
  uint32_t getNextPlatformId() const
  {
    return nextPlatformId_++;
  }

  /**
   * Retrieve the next inertial asset id and increment the counter
   */
  uint32_t getInertialAssetId();


private:
  // ========== Internal Update Methods ==========

  /**
   * @brief Update physics for all dynamic objects
   * @param dt Time step in seconds
   */
  void updatePhysics(double dt);

  /**
   * @brief Detect and resolve collisions
   */
  void updateCollisions();


  // ========== Data ==========


  // Physical assets are those that are "dumb" objects which are
  // affected by physics, but do not have any intelligence
  // e.g. a ball that bounces around
  std::vector<AssetInertial> inertialAssets_;

  // Environmental assets are those that are immovable, but
  // still affect other assets that interact with them.
  // e.g. a floor that a bounces off of
  std::vector<AssetEnvironment> environmentalAssets_;

  // Legacy platform support
  std::vector<Platform> platforms_;
  mutable uint32_t nextPlatformId_{0};  // Mutable for getNextPlatformId() const

  // Current simulation time
  std::chrono::milliseconds time_{0};

  uint32_t inertialAssetIdCounter_{0};

  // NEW: Gravity (constant after construction, ticket 0023a)
  Coordinate gravity_{0.0, 0.0, -9.81};
};

}  // namespace msd_sim

#endif  // WORLD_MODEL_HPP
